--- a/hortapp/www/bower.json
+++ b/hortapp/www/bower.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "Framework7": "framework7#^1.4.2",
     "font-awesome": "fontawesome#^4.6.3",
-    "jquery": "^3.1.1"
+    "jquery": "^3.1.1",
+    "animate.css": "^3.5.2"
   }
 }
