--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ hortapp/www/bower_components/*
 !hortapp/plugins/browser.json
 !hortapp/plugins/fetch.json
 !hortapp/hooks/README.md
+
+!hortapp/platforms/android/build/outputs/apk/android-debug-unaligned.apk
